Delete font-azo di english page

--- a/en/business.html
+++ b/en/business.html
@@ -33,7 +33,7 @@
     <div class="page page-scroll page-in" id="page-business">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Make the world more creative</span>
                 <h3>Business Portfolio</h3>
@@ -61,7 +61,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img02.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Mobility<br />Technology</h3>
+                        <h3>Mobility<br />Technology</h3>
                         <span>01</span>
                         <p>
                             Through the smart integrated transportation platform, we gather Big Data from real-time location tracking, traffic control, vehicles, and distance and cost calculations. Our solutions can predict demand, manage risks, and respond using Big Data.
@@ -71,12 +71,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Our Products & Services:</h4>
+                        <h4>Our Products & Services:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img03.png" />
                                 <div>
-                                    <em class="font-azo"><span>01</span>Mobility Technology</em>
+                                    <em><span>01</span>Mobility Technology</em>
                                     <h5>Development of ITS<br />(Intelligent Transport System)</h5>
                                     <span>
                                         With various technologies and knowledge we have accumulated, we plan, design, and develop transportation platforms. This aims to enhance the efficiency and stability of the transportation system by implementing advanced technologies such as electronics, information, and communication.
@@ -125,7 +125,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img29.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Ticketing System<br /> and Reservation</h3>
+                        <h3>Ticketing System<br /> and Reservation</h3>
                         <span>02</span>
                         <p>
                             Our other flagship products and services include a ticket booking and sales system. Through this solution, we provide customers with an efficient and reliable booking experience. With modern technology, our ticket services offer convenience in trip planning and provide flexibility in purchasing tickets securely and comfortably.
@@ -136,12 +136,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Our Products & Services:</h4>
+                        <h4>Our Products & Services:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img07.jpg" />
                                 <div>
-                                    <em class="font-azo"><span>02</span>Ticketing System and Reservation</em>
+                                    <em><span>02</span>Ticketing System and Reservation</em>
                                     <h5>Reports & statistics provide you with the latest essential business analytics</h5>
                                     <span>
                                         Reports and statistics offer up-to-date business analytics information crucial for you. By utilizing this data, you can better understand your business performance and make more strategically informed decisions.
@@ -181,7 +181,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img10.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Payment <br />System</h3>
+                        <h3>Payment <br />System</h3>
                         <span>03</span>
                         <p>
                             Furthermore, we offer various products and services related to payment systems. These products and services are designed to meet the needs of customers in managing financial transactions easily and securely. We are committed to providing efficient and reliable payment solutions, supporting the sustainability of your business and the security of your financial transactions.
@@ -191,12 +191,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Our Products & Services:</h4>
+                        <h4>Our Products & Services:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img11.png" />
                                 <div>
-                                    <em class="font-azo"><span>03</span>Payment System</em>
+                                    <em><span>03</span>Payment System</em>
                                     <h5>Comprehensive Payment Methods</h5>
                                     <span>
                                         We offer a diverse range of payment methods to facilitate customer transactions. With a variety of payment options, we are committed to providing flexibility and convenience for customers to make payments according to their preferences, making the transaction experience more comfortable and efficient.
@@ -265,7 +265,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img16.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">IT Service <br />Management</h3>
+                        <h3>IT Service <br />Management</h3>
                         <span>04</span>
                         <p>
                             Our IT Service Management (ITSM) services encompass a variety of products and services designed to assist organizations in managing and enhancing the performance of their IT systems and services. Through ITSM, we provide integrated solutions to support the effective planning, implementation, and monitoring of IT services. With a focus on efficient service management, our ITSM products and services can help improve the productivity, efficiency, and operational reliability of your company.
@@ -275,12 +275,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Our Products & Services:</h4>
+                        <h4>Our Products & Services:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img17.png" />
                                 <div>
-                                    <em class="font-azo"><span>04</span>IT Service Management</em>
+                                    <em><span>04</span>IT Service Management</em>
                                     <h5>One-touch KPI Business Management</h5>
                                     <span>
                                         Our service provides ease in KPI management with just one touch. With this approach, your business can efficiently monitor and manage key performance indicators more practically and effectively.
@@ -340,7 +340,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img21.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Logistic and <br />Delivery System</h3>
+                        <h3>Logistic and <br />Delivery System</h3>
                         <span>05</span>
                         <p>
                             Our logistics and delivery system has been designed with sophisticated and reliable solutions, ensuring optimal smoothness in both the management and delivery of goods. With a focus on efficiency, we are committed to providing maximum satisfaction to every customer who relies on our services.
@@ -350,12 +350,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Our Products & Services:</h4>
+                        <h4>Our Products & Services:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img22.png" />
                                 <div>
-                                    <em class="font-azo"><span>05</span>Logistic and Delivery System</em>
+                                    <em><span>05</span>Logistic and Delivery System</em>
                                     <h5>Real-time monitoring and tracking of logistics vehicle locations</h5>
                                     <span>
                                         We conduct real-time monitoring and tracking of logistics vehicle locations. With cutting-edge technology, we ensure accurate and timely control, thereby strengthening efficiency in delivery and logistics management.
@@ -415,7 +415,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img26.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">Live Streaming<br /> Platform</h3>
+                        <h3>Live Streaming<br /> Platform</h3>
                         <span>06</span>
                         <p>
                             Our flagship services are centered around live streaming platforms. By integrating cutting-edge technology and optimizing user experience, we strive to deliver captivating and high-quality live streaming experiences to our users. With this service, we are committed to meeting the needs and expectations of our customers, making their streaming experiences more interactive and satisfying.
@@ -425,12 +425,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">Our Products & Services:</h4>
+                        <h4>Our Products & Services:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img27.png" />
                                 <div>
-                                    <em class="font-azo"><span>06</span>Live Streaming Platform</em>
+                                    <em><span>06</span>Live Streaming Platform</em>
                                     <h5>Online Consultation through Website, Mobile Apps, and Video Call</h5>
                                     <span>
                                         We offer online consultation services through various platforms, including websites, mobile applications, and video calls. Leveraging cutting-edge technology, we facilitate convenient access to consultation for customers, enabling them to interact efficiently and receive assistance comfortably from the convenience of their own devices.
