--- a/en/contact.html
+++ b/en/contact.html
@@ -25,7 +25,7 @@
     <div class="page" id="page-contact">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>With NIA</span>
                 <h3>Contact</h3>
@@ -37,11 +37,11 @@
         <div class="map-wrapper">
             <div class="row">
                 <div class="imx">
-                    <h3 class="font-azo">Location</h3>
+                    <h3>Location</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.3456496281106!2d106.8144257745311!3d-6.218068060901542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f15549fa3d23%3A0x6e35f06585ecba5f!2sAIA%20Central!5e0!3m2!1sid!2sid!4v1701683012463!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <ul>
                         <li>
-                            <span class="font-azo">ADDRESS</span>
+                            <span>ADDRESS</span>
                             <div>
                                 PT. Networks Indonesia Aku <br /><br />
                                 AIA CENTRAL, 21st FL<br /><br />
@@ -53,12 +53,12 @@
 
 
                         <li>
-                            <span class="font-azo">PHONE</span>
+                            <span>PHONE</span>
                             <div>+62 811-9773-002</div>
                         </li>
 
                         <li>
-                            <span class="font-azo">EMAIL</span>
+                            <span>EMAIL</span>
                             <div>networksindonesiaku@gmail.com</div>
                         </li>
                     </ul>
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Business Cooperation</h3>
+                    <h3>Business Cooperation</h3>
 
                     <div class="form-box">
                         <form method="POST" target="iframe1" data-email="scln.elsoul@gmail.com" action="https://script.google.com/macros/s/AKfycbz_-jKVNiaHhdplYd-EkGVHk3itT2kmun-oAIJSxmH9U96ORTSK-sPtcLumFusYKG9Q/exec">
