--- a/en/introduction.html
+++ b/en/introduction.html
@@ -39,7 +39,7 @@
     <div class="page page-in" id="page-introduction">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Connect people with technology</span>
                 <h3>Introduction</h3>
@@ -51,18 +51,13 @@
         <div class="about-wrapper">
             <div class="row">
                 <div class="imx">
-                    <h3 class="font-azo"><span>Company Profile</span></h3>
+                    <h3><span>Company Profile</span></h3>
                     <img src='../assets/img/logo_svg.svg' />
                     <P>
                         <b>Networks Indonesia Aku (NIA)</b> is a company that provides services, solutions, and innovative digital products in the field of Information Technology specializing in Intelligent Transport Systems (ITS). <b>NIA</b> was established on December 10, 2021, as a subsidiary of <b>Samchully Networks</b> in South Korea, which has been in operation since 2014.<br /><br /> We create superior digital products and introduce new innovations through systems and technologies developed in-house in Korea. By embracing advanced Korean technology and systems, <b>NIA</b> is committed to consistently delivering quality in every innovation.<br /><br /> <b>NIA</b> actively participates in building and advancing transportation systems, supporting SMEs, and fostering startup companies in Indonesia. We strive to create outstanding products and bring forth a new vision through a systematic strategy backed by proven technology.
                     </P>
                 </div>
             </div>
-
-            <!--<div class="text-wrapper font-azo">
-                Connecting people and the world through<br />
-                <em>Technology</em>
-            </div>-->
         </div>
         <!-- about-wrapper end -->
 
@@ -72,15 +67,15 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Vision & Mission</h3>
+                    <h3>Vision & Mission</h3>
 
-                    <h4 class="font-azo">Vision :</h4>
+                    <h4>Vision :</h4>
 
                     <p>
                         To become a leading IT company in Indonesia with a focus on prioritizing environmentally friendly products and services. Creating technology for the advancement of transportation and infrastructure, technology in the fields of health, education, logistics, smart factories, online payment systems, and their development.
                     </p>
 
-                    <h4 class="font-azo">Mision :</h4>
+                    <h4>Mision :</h4>
 
                     <ul>
                         <li>
@@ -115,9 +110,9 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Core Value</h3>
+                    <h3>Core Value</h3>
 
-                    <h4 class="font-azo core-value">
+                    <h4 class="core-value">
                         <img src="../assets/img/icon/icon-quotes01.svg" />
                         <span class="letter-c1">C</span>
                         <span class="letter-o">O</span>
@@ -179,7 +174,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Management Philosophy</h3>
+                    <h3>Management Philosophy</h3>
 
                     <div class="block-box">
                         <img src="../assets/img/icon/icon-block01.svg" />
@@ -201,7 +196,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Our History</h3>
+                    <h3>Our History</h3>
 
                     <div class="clear">
                         <span class="fl w15 year">2023</span>
