--- a/en/media/media_1.html
+++ b/en/media/media_1.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Terminal Kampung Rambutan dan Leuwi Panjang akan Dimodernisasi</h3>
+                        <h3>Terminal Kampung Rambutan dan Leuwi Panjang akan Dimodernisasi</h3>
                         <span>DATE : 2022-11-22</span>
 
                         <img src="../../assets/img/media-detail-img01.jpg" />
