--- a/en/media/media_25.html
+++ b/en/media/media_25.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">㈜삼천리네트웍스, 국내 중소 IT기업 최초 인니 버스터미널 현대화 시스템 사업 추진</h3>
+                        <h3>㈜삼천리네트웍스, 국내 중소 IT기업 최초 인니 버스터미널 현대화 시스템 사업 추진</h3>
                         <span>DATE : 2021-09-14</span>
 
                         <img src="../../assets/img/media-detail-img22.jpg" />
