--- a/en/media/media_29.html
+++ b/en/media/media_29.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Disebut 'Terminal Berhantu', Leuwipanjang Bakal Terapkan Tiket Online Sebelum Lebaran</h3>
+                        <h3>Disebut 'Terminal Berhantu', Leuwipanjang Bakal Terapkan Tiket Online Sebelum Lebaran</h3>
                         <span>DATE : 2022-02-21</span>
 
                         <img src="../../assets/img/media-detail-img25.jpg" />
