--- a/en/media/media_3.html
+++ b/en/media/media_3.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">삼천리네트웍스, 인도네시아 교통부 한국 초청</h3>
+                        <h3>삼천리네트웍스, 인도네시아 교통부 한국 초청</h3>
                         <span>DATE : 2023-11-22</span>
 
                         <img src="../../assets/img/media-detail-img03.jpg" />
