--- a/en/media/media_9.html
+++ b/en/media/media_9.html
@@ -25,7 +25,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">31 Loket Bus AKAP di Terminal Kampung Rambutan Dipindah ke Lantai Dua</h3>
+                        <h3>31 Loket Bus AKAP di Terminal Kampung Rambutan Dipindah ke Lantai Dua</h3>
                         <span>DATE : 2023-07-07</span>
 
                         <img src="../../assets/img/media-detail-img09.jpg" />
