--- a/en/notice.html
+++ b/en/notice.html
@@ -25,7 +25,7 @@
     <div class="page page-community page-in" id="page-notice">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Notice</h3>
