--- a/en/notice/notice_3.html
+++ b/en/notice/notice_3.html
@@ -25,7 +25,7 @@
     <div class="page page-detail page-in" id="page-notice-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Notice</h3>
@@ -38,7 +38,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Perjalanan Bisnis Sistem Proyek Penyusunan Master Plan dan Operasi Percontohan Modernisasi Terminal Bus di Indonesia 2023</h3>
+                        <h3>Perjalanan Bisnis Sistem Proyek Penyusunan Master Plan dan Operasi Percontohan Modernisasi Terminal Bus di Indonesia 2023</h3>
                         <span>DATE : 2023-02-06</span>
 
                         <p>
