--- a/en/office.html
+++ b/en/office.html
@@ -39,7 +39,7 @@
     <div class="page" id="page-office">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>PT. Networks Indonesia Aku</span>
                 <h3>Our Office</h3>
@@ -50,7 +50,6 @@
         <!-- office-wrapper start -->
         <div class='office-wrapper'>
             <div class="row">
-                <!-- <h3 class="font-azo">Our Office</h3> -->
 
                 <div class="clear">
                     <div class="fl w50 sld-box">
@@ -69,7 +68,7 @@
                     </div>
                     
                     <div class="fr w50 caption"> 
-                        <span class="font-azo">Beyond Technology, Towards People</span>
+                        <span>Beyond Technology, Towards People</span>
 
                         <h4>PT. NETWORKS INDONESIA AKU</h4>
 
