--- a/en/video.html
+++ b/en/video.html
@@ -25,7 +25,7 @@
     <div class="page page-scroll page-in" id="page-video">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Our Activity</span>
                 <h3>Video Documentation</h3>
@@ -41,10 +41,10 @@
                     <div class="imx">
 
                         <!-- Video start -->
-                        <em class="font-azo"><span>01</span>Jejak Waktu Kita - The Jorney Of Terminal Modernization</em>
+                        <em><span>01</span>Jejak Waktu Kita - The Jorney Of Terminal Modernization</em>
                         <iframe width="920" height="480" src="https://www.youtube.com/embed/Tb2LdiUj0hQ?si=HbfkiSWvzFq7U5wt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                        <em class="font-azo"><span>02</span>Opening Ceremony Smart Terminal</em>
+                        <em><span>02</span>Opening Ceremony Smart Terminal</em>
                         <iframe width="920" height="480" src="https://www.youtube.com/embed/AUgskRthB6w?si=npAbkNFojmYBiLHr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <!-- Video end -->
 
