Fixing Media page

--- a/en/media.html
+++ b/en/media.html
@@ -38,10 +38,10 @@
                 <div class="title clear">
                     <div class="fr">
                         <select>
-                            <option>judul + isi</option>
+                            <option>Title + Contents</option>
                         </select>
                         <div class="search-box">
-                            <input type="text" placeholder="Masukan pencarian" />
+                            <input type="text" placeholder="Search" />
                             <a><img src="../assets/img/icon/icon-search.svg" /></a>
                         </div>
                     </div>
