--- a/kr/ceo.html
+++ b/kr/ceo.html
@@ -23,13 +23,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-scroll page-in" id="page-ceo">
+    <div class="page page-scroll page-in korean-lang" id="page-ceo">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>The past and the future</span>
-                <h3>CEO Messsage</h3>
+                <span class="font-roboto">The past and the future</span>
+                <h3 class="font-roboto">CEO Messsage</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
