--- a/kr/contact.html
+++ b/kr/contact.html
@@ -23,13 +23,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page" id="page-contact">
+    <div class="page korean-lang" id="page-contact">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>With NIA</span>
-                <h3>Contact</h3>
+                <span class="font-roboto">With NIA</span>
+                <h3 class="font-roboto">Contact</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
