--- a/kr/index.html
+++ b/kr/index.html
@@ -34,7 +34,7 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-in" id="page-main">
+    <div class="page page-in korean-lang" id="page-main">
 
         <!-- Video start -->
         <video class="video_compro" loop="true" autoplay="true" muted>
@@ -46,7 +46,7 @@
         <div class="tagline">
             <div class="flex-box right">
                 <div class="text-box wow fadeIn" data-wow-delay="0.6s">
-                    <h3>Green with<br><em>Networks Indonesia Aku</em></h3>
+                    <h3 class="font-roboto">Green with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA는 탄소중립을 통해 인간과 자연의 공존을 추구하며 포용적이고 지속 가능한 <br />복원력 있는 미래를 위해 책임이 있는 일원으로서 노력을 기울여 나가고 있습니다.</p>
                 </div>
                 <img src='../assets/img/main-img-new01.jpg' />
@@ -54,13 +54,13 @@
             <div class="flex-box left">
                 <img src='../assets/img/main-img-new02.jpg' />
                 <div class="text-box wow fadeIn" data-wow-delay="0.6s">
-                    <h3>Technology with<br><em>Networks Indonesia Aku</em></h3>
+                    <h3 class="font-roboto">Technology with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA는 다양한 분야의 사업 경험을 통해 축적된 기술력과 노하우를 기반으로<br />품질과 타협하지 않고 원칙을 지키는 시스템 & 솔루션 기업의 이정표가 되겠습니다.</p>
                 </div>
             </div>
             <div class="flex-box right">
                 <div class="text-box wow fadeIn" data-wow-delay="0.6s">
-                    <h3>Together with<br><em>Networks Indonesia Aku</em></h3>
+                    <h3 class="font-roboto">Together with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA는 협력 기업과 경제적 가치에만 머물지 않고 함께 사회적 가치를 추구하는<br />동반성장을 모토로 건전한 거래 문화를 정착하고 공생 가치를 확산해 가고자 노력합니다.</p>
                 </div>
                 <img src='../assets/img/main-img-new03.jpg' />
