--- a/kr/introduction.html
+++ b/kr/introduction.html
@@ -37,13 +37,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-in" id="page-introduction">
+    <div class="page page-in korean-lang" id="page-introduction">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>Connect people with technology</span>
-                <h3>Introduction</h3>
+                <span class="font-roboto">Connect people with technology</span>
+                <h3 class="font-roboto">Introduction</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
