--- a/kr/media.html
+++ b/kr/media.html
@@ -23,13 +23,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-community" id="page-media">
+    <div class="page page-community korean-lang" id="page-media">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>Media Report from NIA</span>
-                <h3>Media Report</h3>
+                <span class="font-roboto">Media Report from NIA</span>
+                <h3 class="font-roboto">Media Report</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
