--- a/kr/media/media_12.html
+++ b/kr/media/media_12.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>삼천리네트웍스, 인도네시아 교통부와 제2차 한국 초청연수 성료</h3>
                         <span>DATE : 2023-07-27</span>
 
