--- a/kr/media/media_22.html
+++ b/kr/media/media_22.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>㈜삼천리네트웍스, 공적개발원조(ODA) 프로젝트에 전담 주관업체로 선정</h3>
                         <span>DATE : 2021-04-13</span>
 
