--- a/kr/media/media_25.html
+++ b/kr/media/media_25.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>㈜삼천리네트웍스, 국내 중소 IT기업 최초 인니 버스터미널 현대화 시스템 사업 추진</h3>
                         <span>DATE : 2021-09-14</span>
 
