--- a/kr/media/media_37.html
+++ b/kr/media/media_37.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>삼천리네트웍스, 인도네시아 버스터미널 현대화 사업 개회식 개최</h3>
                         <span>DATE : 2023-09-19</span>
 
