--- a/kr/media/media_5.html
+++ b/kr/media/media_5.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>인도네시아 버스터미널 현대화에 삼천리네트웍스 앞장 서</h3>
                         <span>DATE : 2023-02-28</span>
 
