--- a/kr/notice.html
+++ b/kr/notice.html
@@ -23,13 +23,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-community page-in" id="page-notice">
+    <div class="page page-community page-in korean-lang" id="page-notice">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>Media Report from NIA</span>
-                <h3>Notice</h3>
+                <span class="font-roboto">Media Report from NIA</span>
+                <h3 class="font-roboto">Notice</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
