--- a/kr/people.html
+++ b/kr/people.html
@@ -28,13 +28,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-scroll page-in" id="page-people">
+    <div class="page page-scroll page-in korean-lang" id="page-people">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>Teamwork makes the dreamwork</span>
-                <h3>NIA People</h3>
+                <span class="font-roboto">Teamwork makes the dreamwork</span>
+                <h3 class="font-roboto">NIA People</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
