--- a/kr/video.html
+++ b/kr/video.html
@@ -23,13 +23,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-scroll page-in" id="page-video">
+    <div class="page page-scroll page-in korean-lang" id="page-video">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>Our Activity</span>
-                <h3>Video Documentation</h3>
+                <span class="font-roboto">Our Activity</span>
+                <h3 class="font-roboto">Video Documentation</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
