--- a/kr/media/media_11.html
+++ b/kr/media/media_11.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>삼천리네트웍스, 인니 버스터미널 현대화사업 세미나 개최</h3>
                         <span>DATE : 2023-07-27</span>
 
