--- a/kr/media/media_13.html
+++ b/kr/media/media_13.html
@@ -39,7 +39,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3>삼천리네트웍스, 인도네시아 교통부와 제2차 한국 초청연수 성료</h3>
+                        <h3>Terminal Bus Kampung Rambutan Bakal Jadi Percontohan Modernisasi</h3>
                         <span>DATE : 2023-07-27</span>
 
                         <img src="../../assets/img/media-detail-img13.jpg" />
