--- a/kr/media/media_3.html
+++ b/kr/media/media_3.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
+                    <div class="text-box korean-lang">
                         <h3>삼천리네트웍스, 인도네시아 교통부 한국 초청</h3>
                         <span>DATE : 2023-11-22</span>
 
