--- a/kr/media/media_32.html
+++ b/kr/media/media_32.html
@@ -38,8 +38,8 @@
             <div class="row">
                 <div class="imx">
 
-                    <div class="text-box">
-                        <h3>Samchully Networks dan Hubdat Kemenhub Menyelenggarakan Pelatihan Modernisasi Terminal Bus</h3>
+                    <div class="text-box korean-lang">
+                        <h3>㈜삼천리 네트웍스, 인도네시아 육상교통청 ‘버스 터미널 현대화 교육’ 개최</h3>
                         <span>DATE : 2022-03-08</span>
 
                         <img src="../../assets/img/media-detail-img05.jpg" />
