--- a/kr/media_page3.html
+++ b/kr/media_page3.html
@@ -23,7 +23,7 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-community" id="page-media">
+    <div class="page page-community korean-lang" id="page-media">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
