--- a/kr/notice/notice_2.html
+++ b/kr/notice/notice_2.html
@@ -23,13 +23,13 @@
 <body>
     <div data-include="../component/header_child"></div>
 
-    <div class="page page-detail page-in" id="page-notice-detail">
+    <div class="page page-detail page-in korean-lang" id="page-notice-detail">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>Media Report from NIA</span>
-                <h3>Notice</h3>
+                <span class="font-roboto">Media Report from NIA</span>
+                <h3 class="font-roboto">Notice</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
