--- a/kr/office.html
+++ b/kr/office.html
@@ -37,13 +37,13 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page" id="page-office">
+    <div class="page korean-lang" id="page-office">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
             <div class="text-box">
-                <span>PT. Networks Indonesia Aku</span>
-                <h3>Our Office</h3>
+                <span class="font-roboto">PT. Networks Indonesia Aku</span>
+                <h3 class="font-roboto">Our Office</h3>
             </div>
         </div>
         <!-- bg-wrapper end -->
