--- a/kr/people.html
+++ b/kr/people.html
@@ -28,7 +28,7 @@
 <body>
     <div data-include="component/header"></div>
 
-    <div class="page page-scroll page-in korean-lang" id="page-people">
+    <div class="page page-scroll page-in" id="page-people">
 
         <!-- bg-wrapper start -->
         <div class="bg-wrapper">
