Update Korean Page

--- a/kr/introduction.html
+++ b/kr/introduction.html
@@ -55,7 +55,7 @@
                     <h3><span>프로필</span></h3>
                     <img src='../assets/img/logo_svg.svg' />
                     <p>
-                        <b>Networks Indonesia Aku (NIA)</b>는 ITS (Intelligent Transport System)에 특화된 정보 기술 분야의 서비스, 솔루션 및 혁신적인 디지털 제품을 제공하는 회사입니다. 삼천리 네트웍스의 지사로 설립된 NIA는 삼천리 네트웍스에서 자체적으로 개발한 시스템과 기술을 통해 우수한 디지털 제품을 만들고 새로운 혁신을 창조해 냅니다.<br /><br /> 한국의 선진 기술과 시스템을 접목시켜 모든 혁신에서 일관성 있는 품질의 제품과 서비스를 제공하기 위해 노력하고 있습니다.<br /><br /> NIA는 인도네시아의 교통 시스템 구축 및 발전, 중소기업 지원, 스타트업 기업 육성 등에 적극적으로 참여하고 있으며, 검증된 기술을 바탕으로 체계적인 전략을 통해 우수한 제품을 개발하고 새로운 비전을 제시합니다.
+                        <b>Networks Indonesia Aku (NIA)</b>는 <br /> <br /> ITS (Intelligent Transport System)에 특화된 <br /> 정보 기술 분야의 서비스, 솔루션 및 혁신적인 <br /> 디지털 제품을 제공하는 회사입니다. <br /> <br /> 삼천리 네트웍스의 지사로 설립된 NIA는 <br /> 삼천리 네트웍스에서 자체적으로 개발한 시스템과 기술을 통해 <br /> 우수한 디지털 제품을 만들고 새로운 혁신을 창조해 내며<br /><br /> 한국의 선진 기술과 시스템을 접목시켜 모든 혁신에서 일관성 있는 <br /> 품질의 제품과 서비스를 제공하기 위해 노력하고 있습니다.<br /><br /> NIA는 인도네시아의 교통 시스템 구축 및 발전, 중소기업 지원, <br /> 스타트업 기업 육성 등에 적극적으로 참여하고 있으며, <br /> 검증된 기술을 바탕으로 체계적인 전략을 통해 <br /> 우수한 제품을 개발하고 새로운 비전을 제시합니다.
                     </p>
                 </div>
             </div>
@@ -70,33 +70,33 @@
 
                     <h3>비전 & 미션</h3>
 
-                    <h4>비전 :</h4>
+                    <h4>비전 </h4>
 
                     <p>
-                        교통 및 인프라, 보건, 교육, 물류, 스마트 팩토리, 온라인 결제 시스템 및 기타 분야 발전을 위한 기술을 개발하며 친환경 제품과 서비스를 최우선으로 하는 인도네시아의 선도적인 IT 기업이 되겠습니다.
+                        교통 및 인프라, 보건, 교육, 물류, 스마트 팩토리, 온라인 결제 시스템 및 기타 분야 발전을 위한 기술을 개발하며 <br /> 친환경 제품과 서비스를 최우선으로 하는 인도네시아의 선도적인 IT 기업이 되겠습니다.
                     </p>
 
-                    <h4>미션 :</h4>
+                    <h4>미션 </h4>
 
                     <ul>
                         <li>
                             <span>1</span>
-                            <div>
-                                디지털 기반 기술, 하드웨어 및 소프트웨어 개발을 바탕으로 고객의 요구를 충족시키기 위한 혁신적이고 창의적인 솔루션 제공에 중점을 두고 있습니다. 
+                            <div class="font-notoserif">
+                                디지털 기반 기술, 하드웨어 및 소프트웨어 개발을 바탕으로 고객의 요구를 충족시키기 위한 <br /> 혁신적이고 창의적인 솔루션 제공에 중점을 두고 있습니다. 
                             </div>
                         </li>
 
                         <li>
                             <span>2</span>
-                            <div>
-                                고품질 서비스 및 최신 기술 솔루션에 중점을 두고 정보 기술 분야를 발전시키는데 의미 있는 기여를 할 것을 약속하며, 이를 통해 장기적으로 고객과의 강한 신뢰 관계를 구축할 수 있는 파트너로써 IT 솔루션의 선도적인 공급자가 되기 위해 노력합니다.
+                            <div class="font-notoserif">
+                                고품질 서비스 및 최신 기술 솔루션에 중점을 두고 정보 기술 분야를 발전시키는데 의미 있는 <br /> 기여를 할 것을 약속하며, 이를 통해 장기적으로 고객과의 강한 신뢰 관계를 구축할 수 있는 <br /> 파트너로써 IT 솔루션의 선도적인 공급자가 되기 위해 노력합니다.
                             </div>
                         </li>
 
                         <li>
                             <span>3</span>
-                            <div>
-                                인도네시아 IT 산업의 역량 강화 및 성장을 가속화하고 모두가 연결되는 사회를 실현하는 선구자가 되기 위해 노력합니다.
+                            <div class="font-notoserif">
+                                인도네시아 IT 산업의 역량 강화 및 성장을 가속화하고 모두가 연결되는 사회를 실현하는 <br />  선구자가 되기 위해 노력합니다.
                             </div>
                         </li>
                     </ul>
@@ -184,7 +184,7 @@
                     </div>
 
                     <p>
-                        NIA는 혁신을 통해 기술과 자연이 조화롭게 공존하는 세상을 만들고자 하며, 더 나은 환경과 삶을 위하여 긍정적인 영향을 미치겠다는 약속을 드립니다.
+                        NIA는 혁신을 통해 기술과 자연이 조화롭게 공존하는 <br />  세상을 만들고자 하며, 더 나은 환경과 삶을 위하여 <br /> 긍정적인 영향을 미치겠다는 약속을 드립니다.
                     </p>
 
                 </div>
@@ -248,7 +248,7 @@
                             <li>
                                 <span>1월</span>
                                 <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 3차년 사업 착수
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br />   <p class="p-left">3차년 사업 착수</p>
                                 </div>
                             </li>
                         </ul>
@@ -260,7 +260,7 @@
                             <li>
                                 <span>12월</span>
                                 <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 2차년 사업 완료인도네시아 버스터미널 현대화 시스템 홍보 및 확대 세미나 개최(스마랑 노보텔 호텔)<br /><br />
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> 2차년 사업 완료<br /> <br /> 인도네시아 버스터미널 현대화 시스템 홍보 및 확대 세미나 개최<br /> (스마랑 노보텔 호텔)<br /><br />
                                     인도네시아 교통부, 인도네시아 전국 터미널 대표 참석
                                 </div>
                             </li>
@@ -276,7 +276,7 @@
                             <li>
                                 <span>1월</span>
                                 <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 2차년 사업 착수
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> 2차년 사업 착수
                                 </div>
                             </li>
                         </ul>
@@ -288,7 +288,7 @@
                             <li>
                                 <span>12월</span>
                                 <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 1차년 사업 완료<br /><br />
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> 1차년 사업 완료<br /><br />
                                     인도네시아 현지 법인 개설(자카르타)
                                 </div>
                             </li>
@@ -303,7 +303,7 @@
                             <li>
                                 <span>4월</span>
                                 <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 수주”<br /><br />
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 수주”<br />
                                     (ODA, 국토교통부)<br /><br />
                                     인도네시아 시범 터미널 현장검증 및 조사(계속)
                                 </div>
