--- a/kr/media_page3.html
+++ b/kr/media_page3.html
@@ -39,10 +39,10 @@
                 <div class="title clear">
                     <div class="fr">
                         <select>
-                            <option>judul + isi</option>
+                            <option>제목+내용</option>
                         </select>
                         <div class="search-box">
-                            <input type="text" placeholder="Masukan pencarian" />
+                            <input type="text" placeholder="검색어 입력" />
                             <a><img src="../assets/img/icon/icon-search.svg" /></a>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img28.jpg" />
                             </div>
-                            <h3>㈜NIA 및 교통부 터미널 현대화 시스템 교육 개최</h3>
+                            <h3>㈜NIA 및 교통부 <br/>터미널 현대화 시스템 교육 개최</h3>
                             <span class="publisher">Koran Tempo</span>
                             <span>2023-03-10</span>
                         </a>
@@ -70,7 +70,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img29.jpg" />
                             </div>
-                            <h3>122개 운수사 관리자 온라인 티켓 매표 시스템 교육받아</h3>
+                            <h3>122개 운수사 관리자 <br/>온라인 티켓 매표 시스템 교육받아</h3>
                             <span class="publisher">Berita Jakarta</span>
                             <span>2023-05-08</span>
                         </a>
@@ -83,7 +83,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img30.jpg" />
                             </div>
-                            <h3>자카르타 교통부 인스타그램</h3>
+                            <h3>인도네시아 버스터미널 현대화 사업 오프닝 세레머니</h3>
                             <span class="publisher">Instagram Terminal Kampung Rambutan</span>
                             <span>2023-09-13</span>
                         </a>
