--- a/kr/office.html
+++ b/kr/office.html
@@ -73,7 +73,7 @@
 
                         <h4>PT. NETWORKS INDONESIA AKU</h4>
 
-                        <p>오픈되고 친근한 업무 환경을 통해 창의성과 전문적인 기술력을 갖춘 전문가들과 함께 하고 있으며 신뢰할 수 있는 제품과 서비스를 제공하며 파트너와 함께 성장해 나갑니다. </p>
+                        <p>오픈되고 트렌디한 업무 환경을 통해 창의성과 전문적인 기술력을 갖춘 <br /> 전문가들과 함께 하고 있으며, 신뢰할 수 있는 제품과 서비스를 제공하고 <br /> 파트너와 함께 성장해 나갑니다. </p>
                     </div>
                 </div>
             </div>
