--- a/kr/video.html
+++ b/kr/video.html
@@ -42,10 +42,10 @@
                     <div class="imx">
 
                         <!-- Video start -->
-                        <em><span>01</span>Jejak Waktu Kita - The Jorney Of Terminal Modernization</em>
+                        <em class="font-notoserif"><span>01</span> "우리들의 발자취" (Jejak Waktu Kita) - The Jorney Of Terminal Modernization</em>
                         <iframe width="920" height="480" src="https://www.youtube.com/embed/Tb2LdiUj0hQ?si=HbfkiSWvzFq7U5wt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                        <em><span>02</span>Opening Ceremony Smart Terminal</em>
+                        <em class="font-notoserif"><span>02</span> "스마트 터미널 개회식" (Opening Ceremony Smart Terminal)</em>
                         <iframe width="920" height="480" src="https://www.youtube.com/embed/AUgskRthB6w?si=npAbkNFojmYBiLHr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <!-- Video end -->
 
