--- a/kr/ceo.html
+++ b/kr/ceo.html
@@ -49,13 +49,13 @@
 
                                     Networks Indonesia Aku (NIA)의 법인장 손동권입니다. <br /><br />
 
-                                    NIA는 IT 분야의 선구자로서 '통합'과 '혁신'에 중점을 두며 고객의 가치를 실현해 나가고 있습니다. <br /><br />
+                                    NIA는 IT 분야의 선구자로서 '통합'과 '혁신'에 중점을 두며 <br /> 고객의 가치를 실현해 나가고 있습니다. <br /><br />
 
-                                    NIA는 2021년 인도네시아의 환경 친화적인 제품과 서비스를 강조하는 선도적인 IT 기업이 되기 위하여 설립된 삼천리 네트웍스의 지사로 지금까지 한국에서 쌓아온 선진화된 노하우를 토대로 교통 및 인프라, 의료 기술, 교육, 물류, 스마트 팩토리, 온라인 결제 시스템 분야의 발전을 위한 기술을 개발하는 것을 목표로 하고 있고 IT 분야의 전문가로서 정보 데이터를 통해 다양한 서비스를 제공하고 앱/웹 플랫폼을 기반한 솔루션 개발을 하고 있습니다.<br /><br />
+                                    NIA는 2021년 인도네시아의 환경 친화적인 제품과 서비스를 강조하는 <br /> 선도적인 IT 기업이 되기 위하여 설립된 삼천리 네트웍스의 지사로 <br /> 지금까지 한국에서 쌓아온 선진화된 노하우를 토대로 교통 및 인프라, <br /> 의료 기술, 교육, 물류, 스마트 팩토리, 온라인 결제 시스템 분야의 <br /> 발전을 위한 기술을 개발하는 것을 목표로 하고 있고 <br /> IT 분야의 전문가로서 정보 데이터를 통해 <br /> 다양한 서비스를 제공하고 앱/웹 플랫폼을 기반한 <br /> 솔루션 개발을 하고 있습니다.<br /><br />
 
-                                    NIA의 핵심가치는 ‘통합＇과 ‘혁신＇을 기반으로 한 연결(Connect)로서 하나되는 인도네시아를 만들어 나가고자 합니다. 이를 위하여 고품질 서비스, 최신 기술 솔루션에 초점을 맞추어 정보 기술 분야를 발전시키는 데 의미 있는 기여를 할 것을 다짐하며 이를 통해 장기적으로 고객과의 강한 신뢰 관계를 구축할 수 있는 파트너로써 IT 솔루션의 선도적 기업이 되기 위해 노력한다" 라는 비전을 갖고 급변하고 있는 기술 트렌드에 맞춰 지속적으로 성장해 나가고 최선의 서비스를 제공하는데 전념하고 있습니다.<br /><br />
+                                    NIA의 핵심가치는 ‘통합＇과 ‘혁신＇을 기반으로 <br /> 하나되는 인도네시아를 만들어 나가고자 합니다. <br /> 이를 위하여 고품질 서비스, 최신 기술 솔루션에 초점을 맞추어 <br /> 정보 기술 분야를 발전시키는 데 의미 있는 기여를 할 것을 다짐하며, <br /> 이를 통해 장기적으로 고객과의 강한 신뢰 관계를 구축할 수 있는 파트너로써 <br />  IT 솔루션의 선도적 기업이 되기 위해 노력한다" 라는 비전을 갖고 <br /> 급변하고 있는 기술 트렌드에 맞춰 지속적으로 성장해 나가고 <br /> 최선의 서비스를 제공하는데 전념하고 있습니다.<br /><br />
 
-                                    NIA는 앞으로도 여러분들의 신뢰와 성원에 힘입어 ‘통합＇과 ‘혁신＇을 통한 밝은 미래를 함께 만들어 가도록 하겠습니다. <br /><br />
+                                    NIA는 앞으로도 여러분들의 신뢰와 성원에 힘입어 <br /> ‘통합＇과 ‘혁신＇이라는 밝은 미래를 함께 만들어 가도록 하겠습니다. <br /><br />
 
                                     감사합니다.
                                 </span>
