--- a/kr/media.html
+++ b/kr/media.html
@@ -83,7 +83,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img14.jpg" />
                             </div>
-                            <h3>캄풍람부탄 터미널, 온라인 티켓 예매 개시</h3>
+                            <h3>캄풍람부탄 터미널, <br/>온라인 티켓 예매 개시</h3>
                             <span class="publisher">Berita Jakarta</span>
                             <span>2023-09-13</span>
                         </a>
@@ -96,7 +96,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img13.jpg" />
                             </div>
-                            <h3>캄풍람부탄 터미널, 터미널 현대화를 위한 시범운영 터미널로 선정</h3>
+                            <h3>캄풍람부탄 터미널, 터미널 현대화 위한 시범운영 터미널로 선정</h3>
                             <span class="publisher">Berita Jakarta</span>
                             <span>2023-08-23</span>
                         </a>
@@ -148,7 +148,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img09.jpg" />
                             </div>
-                            <h3>캄풍람부탄의 31개의 시외버스 운수사 창구 2층으로 이전</h3>
+                            <h3>캄풍람부탄의 31개의 <br/>시외버스 운수사 창구 2층으로 이전</h3>
                             <span class="publisher">Berita Jakarta</span>
                             <span>2023-07-07</span>
                         </a>
@@ -161,7 +161,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img08.jpg" />
                             </div>
-                            <h3>캄풍람부탄 운수사들 매표소 이전 정책에 동의</h3>
+                            <h3>캄풍람부탄 운수사들 <br/>매표소 이전 정책에 동의</h3>
                             <span class="publisher">Berita Jakarta</span>
                             <span>2023-07-06</span>
                         </a>
@@ -174,7 +174,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img07.jpg" />
                             </div>
-                            <h3>㈜NIA 및 교통부 터미널 현대화 시스템 교육 개최</h3>
+                            <h3>㈜NIA 및 교통부 <br/>터미널 현대화 시스템 교육 개최</h3>
                             <span class="publisher">Tribun</span>
                             <span>2023-03-04</span>
                         </a>
@@ -187,7 +187,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img06.jpg" />
                             </div>
-                            <h3>터미널 현대화를 통해 승객 더이상 승차권 구입 위한 줄서지 않아</h3>
+                            <h3>터미널 현대화를 통해 승객 더 이상 승차권 구입 위한 줄서지 않아</h3>
                             <span class="publisher">Liputan6</span>
                             <span>2023-03-09</span>
                         </a>
@@ -213,7 +213,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img04.jpg" />
                             </div>
-                            <h3>(주)NIA 한국을 대표하여 버스 터미널 현대화 사업 추진</h3>
+                            <h3>(주)NIA 한국을 대표하여 <br/>버스 터미널 현대화 사업 추진</h3>
                             <span class="publisher">Kumparan</span>
                             <span>2022-11-23</span>
                         </a>
@@ -226,7 +226,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img03.jpg" />
                             </div>
-                            <h3>삼천리네트웍스, 인도네시아 교통부 한국 초청 </h3>
+                            <h3>삼천리네트웍스, <br/>인도네시아 교통부 한국 초청 </h3>
                             <span class="publisher">Siminilbo</span>
                             <span>2022-11-22</span>
                         </a>
@@ -239,7 +239,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img02.jpg" />
                             </div>
-                            <h3>인도네시아의 버스터미널 2곳 현대화될 예정</h3>
+                            <h3>인도네시아의 버스터미널 2곳 <br/>현대화될 예정</h3>
                             <span class="publisher">Okezone</span>
                             <span>2022-11-21</span>
                         </a>
