--- a/kr/media_page2.html
+++ b/kr/media_page2.html
@@ -39,10 +39,10 @@
                 <div class="title clear">
                     <div class="fr">
                         <select>
-                            <option>judul + isi</option>
+                            <option>제목+내용</option>
                         </select>
                         <div class="search-box">
-                            <input type="text" placeholder="Masukan pencarian" />
+                            <input type="text" placeholder="검색어 입력" />
                             <a><img src="../assets/img/icon/icon-search.svg" /></a>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img17.jpeg" />
                             </div>
-                            <h3>공항과 유사하다! 캄풍람부탄 터미널 매표소 새로이 변신</h3>
+                            <h3>공항과 유사하다! <br/>캄풍람부탄 터미널 매표소 새로이 변신</h3>
                             <span class="publisher">CNBC Indonesia</span>
                             <span>2023-07-20</span>
                         </a>
@@ -96,7 +96,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img13.jpg" />
                             </div>
-                            <h3>캄풍람부탄 터미널이 현대화의 주요 사례까 되다</h3>
+                            <h3>캄풍람부탄 터미널이 <br/>현대화의 주요 사례가 되다</h3>
                             <span class="publisher">RRI</span>
                             <span>2023-08-23</span>
                         </a>
@@ -148,7 +148,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img22.jpg" />
                             </div>
-                            <h3>㈜삼천리네트웍스, 인도네시아 버스터미널 현대화 시스템 구축 사업 추진</h3>
+                            <h3>㈜삼천리네트웍스, <br/>인도네시아 버스터미널 현대화 시스템 구축 사업 추진</h3>
                             <span class="publisher">Siminilbo</span>
                             <span>2022-09-06</span>
                         </a>
@@ -161,7 +161,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img22.jpg" />
                             </div>
-                            <h3>㈜삼천리네트웍스, 국내 중소 IT기업 최초 인니 버스터미널 현대화 시스템 사업 추진</h3>
+                            <h3>㈜삼천리네트웍스, <br/>국내 중소 IT기업 최초 인니 버스터미널 현대화 시스템 사업 추진</h3>
                             <span class="publisher">FNNews</span>
                             <span>2022-09-14</span>
                         </a>
@@ -187,7 +187,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img12.jpg" />
                             </div>
-                            <h3>인도네시아의 버스터미널 2곳 7가지 시스템 적용함으로써 현대화될 예정</h3>
+                            <h3>인도네시아의 버스터미널 2곳 <br/>7가지 시스템 적용함으로써 현대화될 예정</h3>
                             <span class="publisher">Tribunnews</span>
                             <span>2022-11-20</span>
                         </a>
@@ -239,7 +239,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img27.jpg" />
                             </div>
-                            <h3>200명의 참가자 버스 터미널 현대화 교육 참여</h3>
+                            <h3>200명의 참가자 <br/>버스 터미널 현대화 교육 참여</h3>
                             <span class="publisher">Berita Jakarta</span>
                             <span>2023-03-02</span>
                         </a>
@@ -252,7 +252,7 @@
                             <div class="img-box">
                                 <img src="../assets/img/media-detail-img05.jpg" />
                             </div>
-                            <h3>㈜삼천리 네트웍스, 인도네시아 육상교통청 ‘버스 터미널 현대화 교육’ 개최</h3>
+                            <h3>㈜삼천리 네트웍스, <br/>인도네시아 육상교통청 ‘버스 터미널 현대화 교육’ 개최</h3>
                             <span class="publisher">Siminilbo</span>
                             <span>2023-03-08</span>
                         </a>
